[package]
name = "umiko"
version = "0.1.4"
authors = ["Takasakiii <lucasmc2709@live.com>"]
edition = "2018"
license = "MIT"
description = "Simples gerenciador de webhooks usando a winapi"
homepage = "https://github.com/Takasakiii/umiko"
repository = "https://github.com/Takasakiii/umiko.git"
readme = "README.md"
keywords = ["winapi", "global", "hotkeys", "windows", "keyboard"]
categories = ["external-ffi-bindings", "os::windows-apis"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "^1.2.1"

[target.'cfg(windows)'.dependencies.winapi]
version = "^0.3.9"
features = ["winuser"]

[features]
default = ["hotkeys", "keys"]
hotkeys = []
keys = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]
